--- a/src/UIComponents/HelperComponents/ReturnToPreviousPageButton/ReturnToPreviousPageButton.css
+++ b/src/UIComponents/HelperComponents/ReturnToPreviousPageButton/ReturnToPreviousPageButton.css
@@ -1,11 +1,13 @@
 .return-to-previous-page-button {
   border-radius: 50%;
-  background-color: lightgray !important;
-  position: static;
-  top: 0;
-  left: 0;
+  background-color: transparent;
+  position: absolute;
+  top: 1%;
+  left: 1%;
+  outline: none;
+  box-shadow: none;
 }
 
 .return-to-previous-page-button:hover {
-  background-color: darkgrey !important;
+  background-color: lightgrey !important;
 }
