--- a/src/UIComponents/MainComponents/PerpTradeSectionPage2/PerpTradeSectionPage2.css
+++ b/src/UIComponents/MainComponents/PerpTradeSectionPage2/PerpTradeSectionPage2.css
@@ -46,6 +46,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   font-size: 0.85em;
+  margin-bottom: 2%;
 }
 
 .perp-trade-section-page2-warning-section {
@@ -59,7 +60,7 @@
   box-sizing: border-box;
   height: 20%;
   width: 100%;
-  font-size: 0.75em;
+  font-size: 0.7em;
   color: red;
   word-wrap: break-word;
   overflow-wrap: break-word;
