--- a/src/UIComponents/MainComponents/PerpTradeSectionPage4/PerpTradeSectionPage4.css
+++ b/src/UIComponents/MainComponents/PerpTradeSectionPage4/PerpTradeSectionPage4.css
@@ -25,10 +25,11 @@
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
-  height: 90%;
+  height: 100%;
   width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   color: black;
+  position: relative;
 }
