--- a/src/UIComponents/HelperComponents/ConfirmationPage/ConfirmationPage.css
+++ b/src/UIComponents/HelperComponents/ConfirmationPage/ConfirmationPage.css
@@ -17,6 +17,7 @@
 
 .confirmation-page-text-section {
   height: 60%;
+  max-height: 60px;
   width: 80%;
   overflow: hidden;
   white-space: nowrap;
@@ -31,22 +32,6 @@
   align-items: center;
   font-size: 1em;
   font-weight: bold;
-  color: black;
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
   border-radius: 1.5vmin;
   z-index: 1002;
 }
-
-/* .confirmation-page-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background: rgb(0, 0, 0, 0.1);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 1000;
-  pointer-events: auto;
-} */
