--- a/src/UIComponents/HelperComponents/ConnectWalletOptions/ConnectWalletOptions.css
+++ b/src/UIComponents/HelperComponents/ConnectWalletOptions/ConnectWalletOptions.css
@@ -1,23 +1,29 @@
 .connect-wallet-options {
-  padding: 2%;
-  background-color: rgb(25, 244, 25);
-  color: black;
-  border-radius: 2%;
+  background-color: #2c2c2c;
+  color: #ffffff;
+  border-radius: 12px;
+  padding: 12px 16px;
+  font-size: 14px;
+  font-weight: 500;
+  border: none;
   cursor: pointer;
-  white-space: nowrap;
-  position: relative !important;
-
-  /* Ensuring the button resizes dynamically */
-  /* width: 100%; */
-  max-width: 50%;
-  width: max-content;
-
-  /* Preventing overflow */
-  box-sizing: border-box;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  transition: background-color 0.2s ease;
+  outline: none;
+  width: 60%;
 }
 
 .connect-wallet-options:hover {
-  background-color: rgb(9, 171, 9);
+  background-color: #3a3a3a;
+}
+.connect-wallet-options:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+.connect-wallet-options:active {
+  transform: scale(0.98);
 }
