--- a/src/UIComponents/HelperComponents/LeverageRadioButtonGroup/LeverageRadioButtonGroup.css
+++ b/src/UIComponents/HelperComponents/LeverageRadioButtonGroup/LeverageRadioButtonGroup.css
@@ -1,5 +1,6 @@
 .leverage-radio-button-container {
   height: 100%;
+  max-height: 33px;
   width: 70%;
   display: flex;
   flex-direction: row;
@@ -15,8 +16,8 @@
 }
 
 .leverage-radio-button-label {
-  font-size: 1em;
-  color: black;
+  font-size: 13px;
+  font-weight: 500;
   box-sizing: border-box;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -26,7 +27,8 @@
 .leverage-radio-button-style {
   height: 100%;
   width: 10%;
-  border: 2px solid black;
+  border: 1.5px solid #2a2a2a;
+  background-color: #1a1a1a;
   border-radius: 20%;
   display: flex;
   justify-content: center;
@@ -36,15 +38,16 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  font-size: 0.75em;
+  font-size: 13px;
+  transition: all 0.2s ease-in-out;
 }
 
 .leverage-radio-button-normal-button-color {
-  background-color: whitesmoke;
-  color: black;
+  background-color: #2c2c2c;
+  color: #a0a0a0;
 }
 
 .leverage-radio-button-selected-button-color {
-  background-color: black;
-  color: white;
+  background-color: #0e0e0e;
+  color: #ffffff;
 }
