--- a/src/UIComponents/HelperComponents/NumberInput/NumberInput.css
+++ b/src/UIComponents/HelperComponents/NumberInput/NumberInput.css
@@ -1,5 +1,6 @@
 .number-input-container-style {
   height: 100%;
+  max-height: 55px;
   width: 100%;
   overflow: hidden;
   white-space: nowrap;
@@ -34,7 +35,7 @@
 .number-input-input-area-style {
   height: 100%;
   width: 70%;
-  background-color: whitesmoke;
+  background-color: #2c2c2c;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -48,29 +49,33 @@
   justify-content: space-evenly;
   align-items: center;
   text-align: start;
-  color: black;
-  font-size: 0.9em;
-  font-family: "Times New Roman", Times, serif;
+  border-radius: 8px;
+  box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.1);
+}
+
+input::placeholder {
+  color: #a0a0a0;
+  font-size: 13px;
 }
 
 .number-input-normal-border-style {
-  border: 1px solid black;
+  border: 1px solid #2a2a2a;
   outline: none !important;
 }
 
 .number-input-normal-border-style :focus {
-  border: 1px solid black;
+  border: 1px solid #2a2a2a;
   outline: none !important;
   caret-color: black;
 }
 
 .number-input-error-border-style {
-  border: 1px solid red;
+  border: 1px solid #ff5353;
   outline: none !important;
 }
 
 .number-input-error-border-style:focus {
-  border: 1px solid red;
+  border: 1px solid #ff5353;
   outline: none !important;
   caret-color: black;
 }
@@ -90,7 +95,6 @@
   justify-content: space-evenly;
   align-items: center;
   text-align: center;
-  color: red;
-  font-size: 0.75em;
-  font-family: "Times New Roman", Times, serif;
+  color: #ff5353;
+  font-size: 10px;
 }
