--- a/src/UIComponents/MainComponents/Background/Background.css
+++ b/src/UIComponents/MainComponents/Background/Background.css
@@ -1,8 +1,8 @@
 .background {
   width: 100%;
   height: 100%;
-  background-color: rgb(3, 3, 97);
-  /* border: 2vmin solid lightslategrey; */
+  background-color: #1a1a1a;
+  color: #ffffff;
   box-sizing: border-box;
   margin: 0%;
   padding: 0%;
@@ -13,28 +13,56 @@
   top: 0;
   left: 0;
   overflow: hidden;
-
-  font-family: "Times New Roman", Times, serif;
+  margin: 0%;
+  padding: 0%;
 
   /* position: inherit; */
 }
 
-.heading {
-  height: 10%; /* Takes 10% height */
+.background-heading {
+  height: 9%; /* Takes 7% height */
   width: 100%;
   background-color: transparent;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   text-align: center;
-  font-size: 1.5em;
-  font-family: "Times New Roman", Times, serif;
+  font-size: 1.2em;
   font-weight: bold;
-  color: rgb(243, 243, 9);
   overflow: hidden; /* when child size becomes larger than parent, this hides the part of child that overflows */
   text-overflow: ellipsis; /* to put ...... for the part that is not visible on the screen*/
   white-space: nowrap; /* to avoid going text to next line */
+  color: #ffffff;
+  font-weight: 600;
+  border-bottom: 1.5px solid #2a2a2a;
+  margin: 0%;
+  padding: 0%;
 }
 
-.bottom-section {
-  height: 90%; /* Takes 90% height */
+.background-top-info-section {
+  height: 8%; /* Takes 7% height */
+  width: 100%;
+  background-color: transparent;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 1.2em;
+  font-weight: bold;
+  overflow: hidden; /* when child size becomes larger than parent, this hides the part of child that overflows */
+  text-overflow: ellipsis; /* to put ...... for the part that is not visible on the screen*/
+  white-space: nowrap; /* to avoid going text to next line */
+  color: #ffffff;
+  font-weight: 600;
+  border-bottom: 1.5px solid #2a2a2a;
+  margin: 0%;
+  padding: 0%;
+}
+
+.background-middle-section {
+  height: 78%; /* Takes 90% height */
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -42,4 +70,20 @@
   align-items: flex-start;
   overflow: hidden;
   white-space: nowrap;
+  margin: 0%;
+  padding: 0%;
+}
+
+.background-bottom-section {
+  height: 5%; /* Takes 3% height */
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  overflow: hidden;
+  white-space: nowrap;
+  margin: 0%;
+  padding: 0%;
+  border-top: 1.5px solid#2A2A2A;
 }
