--- a/src/UIComponents/MainComponents/ConnectWalletButton/ConnectWalletButton.css
+++ b/src/UIComponents/MainComponents/ConnectWalletButton/ConnectWalletButton.css
@@ -1,3 +1,7 @@
 .connect-wallet-button {
-  border: 2px solid black;
+  background-color: #6966ff !important;
+}
+
+.connect-wallet-button :hover {
+  background-color: #7f7cff !important;
 }
