--- a/src/UIComponents/MainComponents/DepositUpdateSection/DepositUpdateSection.css
+++ b/src/UIComponents/MainComponents/DepositUpdateSection/DepositUpdateSection.css
@@ -6,11 +6,11 @@
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
-  height: 20%;
-  width: 90%;
-  background-color: white;
+  height: 30%;
+  width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  border-radius: 1.5vmin;
+  border-bottom: 2px solid #2a2a2a;
+  font-size: 13px;
 }
