--- a/src/UIComponents/MainComponents/DepositUpdateSectionPage3/DepositUpdateSectionPage3.css
+++ b/src/UIComponents/MainComponents/DepositUpdateSectionPage3/DepositUpdateSectionPage3.css
@@ -6,7 +6,7 @@
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
-  height: 90%;
+  height: 100%;
   width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -16,17 +16,37 @@
 
 .deposit-update-section-page3-number-input-section {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
-  height: 70%;
+  height: 60%;
   width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.deposit-update-section-page3-bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: start;
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+  height: 30%;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.deposit-update-section-page3-button {
+  width: 30% !important;
+  font-size: 13px !important;
 }
 
 .withdraw-eth-disable-style {
