--- a/src/UIComponents/MainComponents/PerpTradeSectionPage1/PerpTradeSectionPage1.css
+++ b/src/UIComponents/MainComponents/PerpTradeSectionPage1/PerpTradeSectionPage1.css
@@ -14,18 +14,30 @@
 }
 
 .perp-trade-section-page1-buy-sell-section {
+  width: 100%;
+  height: 12%;
+  margin: 0%;
+  padding: 0%;
+  margin-bottom: 2%;
+  margin-top: 0%;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  margin: 0%;
-  padding: 0%;
   box-sizing: border-box;
-  height: 15%;
-  width: 100%;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  border-bottom: 2px solid #2a2a2a;
+}
+
+.perp-trade-section-page1-buy-sell-button {
+  width: 50% !important;
+  border-radius: 0% !important;
+  height: 100% !important;
+  margin: 0% !important;
+  transform: none !important;
+}
+
+.perp-trade-section-page1-buy-sell-button:active {
+  transform: none !important;
 }
 
 .perp-trade-section-page1-quantity-section {
@@ -36,7 +48,7 @@
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
-  height: 15%;
+  height: 17%;
   width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -51,7 +63,7 @@
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
-  height: 15%;
+  height: 17%;
   width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -66,7 +78,7 @@
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
-  height: 15%;
+  height: 10%;
   width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -75,18 +87,49 @@
 
 .perp-trade-section-page1-para-section {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
-  height: 15%;
-  width: 100%;
+  height: 12%;
+  width: 70%;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  color: black;
+}
+
+.perp-trade-section-page1-para-section-left-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: left;
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+  height: 100%;
+  width: 50%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.perp-trade-section-page1-para-section-right-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  text-align: left;
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+  height: 100%;
+  width: 50%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .perp-trade-section-page1-trade-button-section {
@@ -96,13 +139,17 @@
   align-items: center;
   margin: 0%;
   padding: 0%;
+  margin-bottom: 2%;
   box-sizing: border-box;
-  height: 15%;
+  height: 12%;
   width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  color: black;
+}
+
+.trade-button-style {
+  width: 30% !important;
 }
 
 .trade-button-disable-style {
@@ -110,19 +157,16 @@
 }
 
 .long-button-selected {
-  border: 2px solid black;
-  background-color: green;
+  border-bottom: 2px solid #00c087 !important;
+  background-color: rgba(0, 192, 135, 0.4) !important;
+  transform: none !important;
 }
 
-.long-button-selected:hover {
-  background-color: darkgreen;
+.long-button-selected:active {
+  transform: none !important;
 }
 
 .short-button-selected {
-  border: 2px solid black;
-  background-color: red;
-}
-
-.short-button-selected:hover {
-  background-color: darkred;
+  border-bottom: 2px solid #ff5353 !important;
+  background-color: rgba(255, 83, 83, 0.4) !important;
 }
