--- a/src/UIComponents/MainComponents/PerpTradeSectionPage4/PerpTradeSectionPage4.css
+++ b/src/UIComponents/MainComponents/PerpTradeSectionPage4/PerpTradeSectionPage4.css
@@ -1,5 +1,34 @@
-.perp-trade-section-page4-disabled-button-style {
-  cursor: not-allowed;
+.perp-trade-section-page4-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  position: relative;
+}
+
+.perp-trade-section-page4-add-margin-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+  height: 55%;
+  width: 70%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  background: #141414;
+  border-radius: 2vmin;
 }
 
 .perp-trade-section-page4-number-input-area {
@@ -10,26 +39,32 @@
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
-  height: 20%;
+  height: 40%;
   width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 
-.perp-trade-section-page4-container {
+.perp-trade-section-page4-para {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
-  height: 100%;
-  width: 100%;
+  height: 20%;
+  width: 90%;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  color: black;
-  position: relative;
+}
+
+.perp-trade-section-page4-add-margin-button-style {
+  width: 40% !important;
+}
+
+.perp-trade-section-page4-disabled-button-style {
+  cursor: not-allowed;
 }
