--- a/src/UIComponents/MainComponents/TraderInteractionArea/TraderInteractionArea.css
+++ b/src/UIComponents/MainComponents/TraderInteractionArea/TraderInteractionArea.css
@@ -1,15 +1,16 @@
 .trading-interface {
-  background-color: blue;
-  height: 95%;
-  width: 30%;
+  height: 100%;
+  width: 35%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  border-radius: 1.5vmin;
   box-sizing: border-box;
   padding: 0%;
+  margin: 0%;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  background-color: transparent;
+  border: 1px solid #2a2a2a;
 }
