--- a/src/UIComponents/HelperComponents/ConfirmationPage/ConfirmationPage.css
+++ b/src/UIComponents/HelperComponents/ConfirmationPage/ConfirmationPage.css
@@ -23,14 +23,14 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   margin: 0%;
-  padding-left: 8%;
+  padding-left: 15%;
   box-sizing: border-box;
-  background-color: transparent;
+  background-color: #2c2c2c;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  font-size: 1em;
+  font-size: 14px;
   font-weight: bold;
   border-radius: 1.5vmin;
   z-index: 1002;
